fix the about section for all projects

--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
                                         <div class="card-body content">
                                             <h5 class="card-title title text-dark mb-0">Sarmadan</h5>
                                             <div class="d-flex justify-content-between align-items-center mt-3">
-                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>الدانه فهيد / لجين زاحم</span>
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>الدانه بن فهيد / لجين زاحم</span>
                                                 <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
                                             </div>
                                         </div>
@@ -735,7 +735,7 @@
                                         <div class="card-body content">
                                             <h5 class="card-title title text-dark mb-0">أرابيسك</h5>
                                             <div class="d-flex justify-content-between align-items-center mt-3">
-                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>الهنوف حمد / وسن روق</span>
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>الهنوف آل حمد</span>
                                                 <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
                                             </div>
                                         </div>
@@ -751,13 +751,13 @@
                                 <a href="project-arabesque-ii.html" class="project-card-link">
                                     <div class="card blog blog-primary project-card rounded border-0 shadow-sm">
                                         <div class="position-relative">
-                                            <img src="assets/images/p28.jpg" class="card-img-top rounded-top project-card-logo" alt="شعار مشروع أرابيسك II">
+                                            <img src="assets/images/p28.jpg" class="card-img-top rounded-top project-card-logo" alt="شعار مشروع أرابيسك">
                                             <div class="overlay rounded-top"></div>
                                         </div>
                                         <div class="card-body content">
-                                            <h5 class="card-title title text-dark mb-0">أرابيسك II</h5>
+                                            <h5 class="card-title title text-dark mb-0">أرابيسك</h5>
                                             <div class="d-flex justify-content-between align-items-center mt-3">
-                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>الهنوف حمد / وسن روق</span>
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>وسن آل روق</span>
                                                 <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
                                             </div>
                                         </div>
