--- a/project-ahzojah.html
+++ b/project-ahzojah.html
@@ -130,6 +130,7 @@
                             <p class="text-muted mb-3">من الأهازيج الشعرية، وامتدادًا لتنوع الجذور التراثية في الأزياء، برزت رقصة العرضة النجدية كرمزٍ للشجاعة والوحدة، إذ كانت تُلهب حماس المحاربين وتشجع قلوبهم على النصر وتوحيد المملكة،ثم توارثتها الأجيال حتى غدت جزءًا أصيلًا من الاحتفالات الرسمية والاجتماعية التي تكللها الفرح والسرور.
 هذه المجموعة تشرح عُمق و أصالة مكونات العرضة النجدية قديمًا و تحولها لجزء يُرتدى اليوم يحمل الهيبة ذاتها</p>
                         </div>
+                        <p class="text-muted mb-3">Emerging from poetic chants and reflecting the rich diversity of traditional roots in clothing, the Najdi Ardha dancestands as a symbol of courage and unity. It once ignited the warriors’ spirits, inspiring them toward victory and the unification of the Kingdom. Passed down through generations, it has become an integral part of official and social celebrations filled with joy and pride. This collection conveys the depth and authenticity of the traditional elements of the Najdi Ardha, reimagined as wearable pieces that preserve the same sense of pride and grandeur they once embodied.</p>
                     </div>
                 </div>
             </div>
