--- a/project-alusul.html
+++ b/project-alusul.html
@@ -63,57 +63,57 @@
                         <div class="tiny-six-item">
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/الأصول/IMG_6402.JPG" class="img-fluid" alt="تصميم الأصول 1">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 1</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 1</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/الأصول/IMG_6421.JPG" class="img-fluid" alt="تصميم الأصول 2">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 2</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 2</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotios-photos-1090638.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/الأصول/IMG_6438.JPG" class="img-fluid" alt="تصميم الأصول 3">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 3</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 3</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-maksgelatin-4352247.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/الأصول/58B609F2-49A3-4729-B2FC-7F2CEA5D57E7.jpeg" class="img-fluid" alt="تصميم الأصول 4">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 4</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 4</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-diva-33964231.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/الأصول/5A95BA8F-4FB0-405C-9CFD-6EF7E2D6B4B3.jpeg" class="img-fluid" alt="تصميم الأصول 5">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 5</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 5</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/الأصول/BAE1DC1B-BF4A-496A-8DA6-DD4C6311095A.jpeg" class="img-fluid" alt="تصميم الأصول 6">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 6</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 6</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/الأصول/IMG_6421.JPG" class="img-fluid" alt="تصميم الأصول 7">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 7</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 7</a>
                                     </div>
                                 </div>
                             </div>
@@ -135,10 +135,8 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع الأصول</h4>
-                            <p class="text-muted mb-3">مشروع الأصول يخلق حوارًا بصريًا بين زخارف المنطقة الشرقية والجنوبية، ليعرض ثراء الهوية السعودية وتنوعها في قالب تصميمي معاصر.</p>
-                            <p class="text-muted mb-3">تتجاور الهندسية الدقيقة مع الجرأة اللونية لتولد أنماطًا مميزة تجمع بين التراث والحداثة.</p>
-                            <p class="text-muted">كل قطعة تُجسد تفاعل الشرق والجنوب في قالب واحد، لتكون رسالة فنية تعبر عن الأصالة والابتكار معًا.</p>
-                        </div>
+                            <p class="text-muted mb-3">دمج بين زخارف المنطقه الشرقيه الجنوبيه يصنع حوارًا بصريًا بين الشرق والجنوب، بين الهندسية الدقيقة والجرأة اللونية، لتظهر تصاميم فريدة تمثل تعدد الهوية السعودية وتنوعها.</p>
+                           </div>
                     </div>
                 </div>
             </div>
