--- a/project-amad.html
+++ b/project-amad.html
@@ -127,10 +127,8 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع أمَـــد</h4>
-                            <p class="text-muted mb-3">يحكي أمَـــد لقاء المها العربي بجزيرة السندالة، حيث يلتقي رقي الصحراء بهدوء البحر في لوحة بصرية فاخرة.</p>
-                            <p class="text-muted mb-3">تستحضر المجموعة لون الرمال وعمق البحر في قصات انسيابية تجمع بين الخفة والفخامة.</p>
-                            <p class="text-muted">الأزياء صُممت لتمنح المرأة حضورًا شاعريًا يستلهم الطبيعة السعودية بروح معاصرة.</p>
-                        </div>
+                            <p class="text-muted mb-3">أمَــــد حيث تروى حكاية المها العربي على ضفاف جزيرة السندالة في لقاء يجمع رقيّ الصحراء بهدوء البحر.</p>
+                           </div>
                     </div>
                 </div>
             </div>
