--- a/project-arabesque-ii.html
+++ b/project-arabesque-ii.html
@@ -3,9 +3,9 @@
 
     <head>
         <meta charset="utf-8">
-        <title>أرابيسك II - تفاصيل المشروع</title>
+        <title>أرابيسك - تفاصيل المشروع</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="أرابيسك II يواصل ترجمة تفاصيل المسجد النبوي إلى أزياء متعددة الاستخدام بروح عصرية." >
+        <meta name="description" content="أرابيسك يواصل ترجمة تفاصيل المسجد النبوي إلى أزياء متعددة الاستخدام بروح عصرية." >
         <meta name="keywords" content="أرابيسك، المسجد النبوي، أزياء معاصرة، تصميم سعودي">
         <meta name="author" content="الهنوف حمد، وسن روق">
 
@@ -63,7 +63,7 @@
                         <div class="tiny-six-item">
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/وسن ارابيسك/IMG-20251114-WA0053.jpg" class="img-fluid" alt="تصميم وسن أرابيسك 1">
                                     <div class="content">
                                         <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 1</a>
                                     </div>
@@ -71,7 +71,7 @@
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/وسن ارابيسك/IMG-20251114-WA0055.jpg" class="img-fluid" alt="تصميم وسن أرابيسك 2">
                                     <div class="content">
                                         <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 2</a>
                                     </div>
@@ -79,7 +79,7 @@
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotios-photos-1090638.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/وسن ارابيسك/IMG-20251114-WA0057.jpg" class="img-fluid" alt="تصميم وسن أرابيسك 3">
                                     <div class="content">
                                         <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 3</a>
                                     </div>
@@ -87,7 +87,7 @@
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-maksgelatin-4352247.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/وسن ارابيسك/IMG-20251114-WA0059.jpg" class="img-fluid" alt="تصميم وسن أرابيسك 4">
                                     <div class="content">
                                         <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 4</a>
                                     </div>
@@ -95,7 +95,7 @@
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-diva-33964231.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/وسن ارابيسك/IMG-20251114-WA0061.jpg" class="img-fluid" alt="تصميم وسن أرابيسك 5">
                                     <div class="content">
                                         <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 5</a>
                                     </div>
@@ -103,7 +103,7 @@
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/وسن ارابيسك/IMG-20251114-WA0063.jpg" class="img-fluid" alt="تصميم وسن أرابيسك 6">
                                     <div class="content">
                                         <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 6</a>
                                     </div>
@@ -111,7 +111,7 @@
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/وسن ارابيسك/IMG-20251114-WA0053.jpg" class="img-fluid" alt="تصميم وسن أرابيسك 7">
                                     <div class="content">
                                         <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 7</a>
                                     </div>
@@ -128,19 +128,18 @@
                 <div class="row align-items-center">
                     <div class="col-md-6 mb-4 mb-md-0">
                         <div class="me-lg-5 text-center text-md-start">
-                            <img src="assets/images/p28.jpg" class="project-detail-logo" alt="شعار مشروع أرابيسك II">
+                            <img src="assets/images/p28.jpg" class="project-detail-logo" alt="شعار مشروع أرابيسك">
                         </div>
                     </div>
 
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
-                            <h4 class="title mb-4">حول مشروع أرابيسك II</h4>
-                            <p class="text-muted mb-3">تواصل أرابيسك II استكشاف جماليات المسجد النبوي من خلال تحويل الأقواس والزخارف إلى أزياء حديثة.
+                            <h4 class="title mb-4">حول مشروع أرابيسك</h4>
+                            <p class="text-muted mb-3">مشروع "أرابيسك" هو مشروع تخرّج يهدف إلى ابتكار مجموعة أزياء مستوحاة من جماليات العمارة الإسلامية في المسجد النبوي الشريف، حيث يتم تحويل الزخارف الهندسية والأقواس إلى تصاميم عصرية تجمع بين الأصالة والحداثة.
+تركّز المجموعة على تقديم قطع متعددة الاستخدام تناسب المرأة العصرية الباحثة عن التوازن بين الهوية العربية والأناقة الحديثة، باستخدام خامات طبيعية وتقنيات تطريز دقيقة بخيوط ذهبية وفضية.
+يمثل المشروع رؤية إبداعية لدمج التراث الفني الإسلامي مع مفاهيم الموضة العالمية، ليقدّم منتجات ذات قيمة ثقافية وجمالية، تستهدف النساء من الفئة العمرية 20-40 سنة في السوق الخليجي والعربي.
                             </p>
-                            <p class="text-muted mb-3">تستخدم المجموعة خامات طبيعية وتقنيات تطريز دقيقة بخيوط ذهبية وفضية لتقديم قطع عملية ذات قيمة ثقافية.
-                            </p>
-                            <p class="text-muted">تمنح التصاميم المرأة الخليجية والعربية خيارات متجددة تجمع بين الذائقة العالمية والهوية المحلية.</p>
-                        </div>
+                            </div>
                     </div>
                 </div>
             </div>
@@ -151,15 +150,15 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8 col-md-10">
                         <div class="title-heading text-center">
-                            <h4 class="mb-4">معلومات المصممتين</h4>
-                            <p class="text-muted">يمكنك التواصل مع فريق أرابيسك II عبر القنوات التالية.</p>
+                            <h4 class="mb-4">معلومات المصممة</h4>
+                            <p class="text-muted">يمكنك التواصل مع فريق أرابيسك عبر القنوات التالية.</p>
                             <div class="d-flex contact-detail align-items-center mt-4 justify-content-center">
                                 <div class="icon">
                                     <i class="uil uil-user-circle fea icon-m-md text-dark me-3"></i>
                                 </div>
                                 <div class="flex-1 content text-start">
                                     <h6 class="title fw-bold mb-0">أسماء المصممتين</h6>
-                                    <span class="text-primary">الهنوف حمد · وسن روق</span>
+                                    <span class="text-primary">وسن آل روق</span>
                                 </div>
                             </div>
                             <div class="d-flex contact-detail align-items-center mt-3 justify-content-center">
@@ -168,7 +167,6 @@
                                 </div>
                                 <div class="flex-1 content text-start">
                                     <h6 class="title fw-bold mb-0">إنستغرام</h6>
-                                    <a href="https://www.instagram.com/alhanouf_atelier" target="_blank" rel="noopener" class="text-primary d-block">@alhanouf_atelier</a>
                                     <a href="https://www.tiktok.com/@wasan33366" target="_blank" rel="noopener" class="text-primary">@wasan33366</a>
                                 </div>
                             </div>
@@ -178,7 +176,6 @@
                                 </div>
                                 <div class="flex-1 content text-start">
                                     <h6 class="title fw-bold mb-0">أرقام التواصل</h6>
-                                    <a href="tel:0582659191" class="text-primary d-block">0582659191</a>
                                     <a href="tel:0505363270" class="text-primary">0505363270</a>
                                 </div>
                             </div>
