--- a/project-arabesque.html
+++ b/project-arabesque.html
@@ -63,57 +63,49 @@
                         <div class="tiny-six-item">
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/arabisc/146A2881.jpg" class="img-fluid" alt="تصميم أرابيسك 1">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 1</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 1</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/arabisc/146A2891-Recovered.jpg" class="img-fluid" alt="تصميم أرابيسك 2">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 2</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 2</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotios-photos-1090638.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/arabisc/146A2937.jpg" class="img-fluid" alt="تصميم أرابيسك 3">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 3</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 3</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-maksgelatin-4352247.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/arabisc/146A2949.jpg" class="img-fluid" alt="تصميم أرابيسك 4">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 4</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 4</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-diva-33964231.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/arabisc/146A2966.jpg" class="img-fluid" alt="تصميم أرابيسك 5">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 5</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 5</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/arabisc/146A2997.jpg" class="img-fluid" alt="تصميم أرابيسك 6">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 6</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
-                                    <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 7</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 6</a>
                                     </div>
                                 </div>
                             </div>
@@ -135,10 +127,10 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع أرابيسك</h4>
-                            <p class="text-muted mb-3">يستلهم مشروع أرابيسك جماليات العمارة الإسلامية في المسجد النبوي الشريف ليحوّل الزخارف والأقواس إلى تصاميم عصرية.</p>
-                            <p class="text-muted mb-3">تقدم المجموعة قطعًا متعددة الاستخدام تجمع بين الهوية العربية والأناقة الحديثة باستخدام خامات طبيعية وتطريز بخيوط ذهبية وفضية.</p>
-                            <p class="text-muted">تستهدف الأزياء المرأة الخليجية والعربية الباحثة عن توازن بين التراث والموضة العالمية.</p>
-                        </div>
+                            <p class="text-muted mb-3">مشروع "أرابيسك" هو مشروع تخرّج يهدف إلى ابتكار مجموعة أزياء مستوحاة من جماليات العمارة الإسلامية في المسجد النبوي الشريف، حيث يتم تحويل الزخارف الهندسية والأقواس إلى تصاميم عصرية تجمع بين الأصالة والحداثة.
+تركّز المجموعة على تقديم قطع متعددة الاستخدام تناسب المرأة العصرية الباحثة عن التوازن بين الهوية العربية والأناقة الحديثة، باستخدام خامات طبيعية وتقنيات تطريز دقيقة بخيوط ذهبية وفضية.
+يمثل المشروع رؤية إبداعية لدمج التراث الفني الإسلامي مع مفاهيم الموضة العالمية، ليقدّم منتجات ذات قيمة ثقافية وجمالية، تستهدف النساء من الفئة العمرية 20-40 سنة في السوق الخليجي والعربي.</p>
+                            </div>
                     </div>
                 </div>
             </div>
@@ -149,15 +141,15 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8 col-md-10">
                         <div class="title-heading text-center">
-                            <h4 class="mb-4">معلومات المصممتين</h4>
+                            <h4 class="mb-4">معلومات المصممة</h4>
                             <p class="text-muted">تواصل مع فريق أرابيسك للحصول على مزيد من التفاصيل.</p>
                             <div class="d-flex contact-detail align-items-center mt-4 justify-content-center">
                                 <div class="icon">
                                     <i class="uil uil-user-circle fea icon-m-md text-dark me-3"></i>
                                 </div>
                                 <div class="flex-1 content text-start">
-                                    <h6 class="title fw-bold mb-0">أسماء المصممتين</h6>
-                                    <span class="text-primary">الهنوف حمد · وسن روق</span>
+                                    <h6 class="title fw-bold mb-0">اسم المصممة</h6>
+                                    <span class="text-primary">الهنوف آل حمد</span>
                                 </div>
                             </div>
                             <div class="d-flex contact-detail align-items-center mt-3 justify-content-center">
@@ -167,7 +159,6 @@
                                 <div class="flex-1 content text-start">
                                     <h6 class="title fw-bold mb-0">إنستغرام</h6>
                                     <a href="https://www.instagram.com/alhanouf_atelier" target="_blank" rel="noopener" class="text-primary d-block">@alhanouf_atelier</a>
-                                    <a href="https://www.tiktok.com/@wasan33366" target="_blank" rel="noopener" class="text-primary">@wasan33366</a>
                                 </div>
                             </div>
                             <div class="d-flex contact-detail align-items-center mt-3 justify-content-center">
@@ -177,7 +168,6 @@
                                 <div class="flex-1 content text-start">
                                     <h6 class="title fw-bold mb-0">أرقام التواصل</h6>
                                     <a href="tel:0582659191" class="text-primary d-block">0582659191</a>
-                                    <a href="tel:0505363270" class="text-primary">0505363270</a>
                                 </div>
                             </div>
                         </div>
