--- a/project-aristocrat.html
+++ b/project-aristocrat.html
@@ -127,9 +127,11 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع أرستقراط</h4>
-                            <p class="text-muted mb-3">أرستقراط علامة أزياء راقية تعيد إحياء روح الفخامة التاريخية بأسلوب حديث يلائم المرأة العصرية.</p>
-                            <p class="text-muted mb-3">تجمع المجموعة تفاصيل العصر الفيكتوري وزخارفه المميزة مع لمسات معاصرة تعكس الذوق الرفيع والأنوثة الراقية.</p>
-                            <p class="text-muted">كل قطعة تجربة فنية تمزج الأصالة الأوروبية بالإبداع الحديث لتقدم إطلالات لا يبهت بريقها مع الزمن.</p>
+                            <p class="text-muted mb-3">مشروع “ أرستقراط “هو علامة أزياء راقية تُعنى بتصميم أزياء نسائية تمزج بين الفخامة الكلاسيكية للعصر الفيكتوري والرؤية العصرية الحديثة.
+يُجسّد المشروع مزيجًا فريدًا من الأناقة والرقي، حيث تُترجم التفاصيل الدقيقة والزخارف المميزة في تصاميم معاصرة تناسب المرأة العصرية التي تبحث عن التميّز في إطلالاتها الرسمية والمناسبات الخاصة.
+</p>
+                            <p class="text-muted mb-3">ينتمي المشروع إلى قطاع الأزياء الراقية ويهدف إلى إعادة إحياء روح الفخامة التاريخية بأسلوب حديث يُعبّر عن الذوق الرفيع والأنوثة الراقية.
+كما يسعى "أرِسْتُقراط" إلى تقديم تصاميم تجمع بين الأصالة الأوروبية والإبداع الحديث لتجعل من كل قطعة تجربة فنية تعبّر عن هوية أنثوية فريدة وأناقة لا تزول مع الزمن.</p>
                         </div>
                     </div>
                 </div>
