--- a/project-asternis.html
+++ b/project-asternis.html
@@ -143,10 +143,22 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع أسترنيس</h4>
-                            <p class="text-muted mb-3">تتناول مجموعة أسترنيس رحلة طير صغير يتوق لنجمة بعيدة تشع بالضوء، رحلة تعكس الحاجة للانتماء، وإعادة اكتشاف الذات، والشعور بالفخر عند بلوغ ما نظنه مستحيلًا.</p>
-                            <p class="text-muted mb-3">نتبع ذلك الطائر عبر مساعٍ صغيرة تتغير خلالها الطرق والوجهات، وقد نصل إلى مبتغانا أو نجد ما نحتاجه حقًا في منتصف الطريق. المهم هو الاحتفاء بالمحاولة نفسها وبالشغف الذي يقودنا نحو النور.</p>
-                            <p class="text-muted">في أسترنيس نحتفل بالسعي، ونترجمه إلى أزياء أدائية مستوحاة من طائر يطارد نجمة في سماء الليل، لنعكس حلم كل ساعٍ نحو ضوءه الخاص.</p>
-                        </div>
+                            <p class="text-muted mb-3">تحدث مجموعة استرنيس عن رحلة سعي طير صغير للوصول لنجمة بعيدة ذات أشعة براقة، 
+قد يكون الإنتماء هو ما يسعى إليه طيرنا الضائع، أو صورة للذات التي يريد الوصول إليها، أو مجرد الشعور بالفخر لتحقيق شيء عظيم.
+ننجذب جميعا لشيء مشرق في الطريق، سواء أكانت حاجة رغبة أو حتى مجرد نزوة
+تتشكل حياتنا من مجموعة مساعي صغيرة، قد نصل فيها إلى مبتغانا أو نغير طريقنا خلال الرحلة
+قد نجد مرادنا أو قد يفاجئنا ما نحتاج إليه فعلا في منتصف الطريق.
+
+لا نعلم مصير مساعينا الصغيرة، لكن في استرنيس نحن نحتفل بالسعي ذاته، الرغبة بشيء ما وبذل الجهد للوصول إليه. لنحتفل بمساعينا الصغيرة ونمثلها بأزياء أدائية مقتبسة من الطائر الذي سعى خلف نجمة في سماء الليل.</p>
+
+<p class="text-muted mb3">Asternis collection is inspired by a little bird who set it's eyes on a distant star shining bright in the night sky.
+The bird might be seeking a place to belong, a self image to fulfill, or just the pride of achievement.
+We're all drowning to something bright we find along the way, a necessity, a want or perhaps just a whim.
+Our lives are made up of small journeys we take towards things we seek, we might achieve these things, change our course halfway through, or stumble on what we truly need along the way.
+
+We never know where our journeys may take us, but in Asternis we celebrate the journey itself, for life is lived in the act of seeking. 
+Through theatrical fashion, we honor these life journeys inspired by our little bird.</p>
+                             </div>
                     </div>
                 </div>
             </div>
@@ -179,15 +191,7 @@
                                     <a href="https://www.instagram.com/reem.albu.olayan" target="_blank" rel="noopener" class="text-primary">@reem.albu.olayan</a>
                                 </div>
                             </div>
-                            <div class="d-flex contact-detail align-items-center mt-3 justify-content-center">
-                                <div class="icon">
-                                    <i class="uil uil-envelope fea icon-m-md text-dark me-3"></i>
-                                </div>
-                                <div class="flex-1 content text-start">
-                                    <h6 class="title fw-bold mb-0">قناة تواصل إضافية</h6>
-                                    <span class="text-primary">متاحة عند الطلب</span>
-                                </div>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
