--- a/project-aurelle.html
+++ b/project-aurelle.html
@@ -127,10 +127,9 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع Aurelle</h4>
-                            <p class="text-muted mb-3">يحمل اسم أوريـل معنى لمعة الذهب على رمال الصحراء، تلك اللمعة التي تتولد من عناق الشمس وسكون الرمال.</p>
-                            <p class="text-muted mb-3">تعيد المجموعة تعريف الأزياء الصحراوية برؤية عصرية تمزج بين الفن والهوية في تناغم يعكس سحر الصحراء وروحها الراقية.</p>
-                            <p class="text-muted">كل تصميم يلتقط دفء الصحراء وثراءها ليصوغ حضورًا أنثويًا متوهجًا بلمسات ذهبية معاصرة.</p>
-                        </div>
+                            <p class="text-muted mb-3">يحمل اسم أوريـل معنى لمعة الذهب على رمال الصحراء، تلك اللمعة التي تولد من عناق الشمس وسكون الرمال.
+ومن عمق هذا الإلهام تولد تصاميم أوريـل، التي تعيد تعريف الأزياء الصحراوية برؤية عصرية تمزج بين الفن والهوية في تناغمٍ يعكس سحر الصحراء وروحها الراقية.</p>
+                            </div>
                     </div>
                 </div>
             </div>
