--- a/project-baydhana.html
+++ b/project-baydhana.html
@@ -127,10 +127,8 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع مجموعة البيذانة</h4>
-                            <p class="text-muted mb-3">مجموعة البيذانة مستوحاة من نقوش الأبواب النجدية القديمة التي تُعرف باسم "البيذانة" برمزية المعينات المشابهة لبذور اللوز.</p>
-                            <p class="text-muted mb-3">تعيد المجموعة صياغة تلك الرموز التراثية ضمن أزياء Smart Casual توازن بين البساطة والأناقة وتستلهم روح المرأة السعودية المعاصرة.</p>
-                            <p class="text-muted">كل تصميم يحمل لمسة من الفخر بالجذور مع حضور عصري يمنح القطع قابلية للارتداء اليومي دون التفريط بثراء التفاصيل.</p>
-                        </div>
+                            <p class="text-muted mb-3">نبذة عن المشروع: مجموعة “البيذانة” مستوحاة من النقوش والزخارف الهندسية التي تزين الأبواب النجدية القديمة، والمعروفة باسم “البيذانة”، وهي رموز فنية على شكل معينات تمثل بذور اللوز. استُلهمت هذه التفاصيل التراثية العريقة لإعادة صياغتها ضمن تصاميم عصرية بأسلوب Smart Casual يجمع بين البساطة والأناقة، ليعكس روح المرأة السعودية المعاصرة التي تفخر بجذورها وتواكب الموضة الحديثة في آنٍ واحد.</p>
+                            </div>
                     </div>
                 </div>
             </div>
