--- a/project-cartadolce.html
+++ b/project-cartadolce.html
@@ -63,57 +63,49 @@
                         <div class="tiny-six-item">
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/CartaDolce/NI0A9224.jpeg" class="img-fluid" alt="تصميم CartaDolce 1">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 1</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 1</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/CartaDolce/NI0A9309.jpeg" class="img-fluid" alt="تصميم CartaDolce 2">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 2</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 2</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotios-photos-1090638.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/CartaDolce/NI0A9329.jpeg" class="img-fluid" alt="تصميم CartaDolce 3">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 3</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 3</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-maksgelatin-4352247.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/CartaDolce/NI0A9373.jpeg" class="img-fluid" alt="تصميم CartaDolce 4">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 4</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 4</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-diva-33964231.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/CartaDolce/mm.png" class="img-fluid" alt="تصميم CartaDolce 5">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 5</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 5</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/CartaDolce/,.png" class="img-fluid" alt="تصميم CartaDolce 6">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 6</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
-                                    <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 7</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 6</a>
                                     </div>
                                 </div>
                             </div>
@@ -135,10 +127,8 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع CartaDolce</h4>
-                            <p class="text-muted mb-3">كولكشن CartaDolce يجسد الرسائل الورقية وما تحمله من شوق وحنين، حيث تتحول كل قطعة إلى رسالة شخصية دافئة.</p>
-                            <p class="text-muted mb-3">تستمد المجموعة روحها من لحظات الانتظار والذكريات العالقة بين الكلمات، لتخلق أزياء رومانسية تحمل لمسة عاطفية.</p>
-                            <p class="text-muted">تُجسد التفاصيل الدقيقة دفء الحكايات المكتوبة، لتمنح المرأة إطلالة تحاكي رسائلها الخاصة المليئة بالمشاعر.</p>
-                        </div>
+                            <p class="text-muted mb-3">كولكشن Carta Dolce يجسّد فكرة الرسائل الورقية وما تحمله من مشاعر الشوق والحنين. يستحضر لحظات الانتظار والذكريات التي تبقى عالقة بين الكلمات، لتصبح كل قطعة رسالة تعبّر عن عاطفة خفية وحكاية شخصية تحمل لمسة من الرومانسية والدفء.</p>
+                            </div>
                     </div>
                 </div>
             </div>
