--- a/project-dn-sh.html
+++ b/project-dn-sh.html
@@ -127,9 +127,7 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع DN SH</h4>
-                            <p class="text-muted mb-3">يركز مشروع DN SH على تصميم أزياء زفاف مستوحاة من زخارف السدو التقليدية بأسلوب معاصر، لإبراز أناقة المرأة ذات الجسم المستطيل بطريقة أنثوية متوازنة.</p>
-                            <p class="text-muted mb-3">نحن نمزج بين التراث والابتكار لنمنح كل عروس حضورًا متفردًا، حيث تتجسد فخامة الحرف اليدوية في تفاصيل دقيقة تبرز جمال الخطوط بلمسة عصرية.</p>
-                            <p class="text-muted">كل قطعة تحتفي بالسدو كرمز للأصالة السعودية، وتُترجم هذا الإرث إلى لغة تصميم تعكس التفرد، والفخامة، والاحتفال بالهوية.</p>
+                            <p class="text-muted mb-3">مشروعنا يركز على تصميم أزياء زفاف مستوحاة من زخارف السدو التقليدية، بهدف تعزيز أناقة المرأة ذات الجسم المستطيل وإبراز جمال خطوطها بطريقة أنثوية وفاخرة. نسعى من خلال التصاميم إلى المزج بين التراث والابتكار، لتقديم قطع فريدة تعكس التفرد والفخامة وتترك حضورًا مميزًا لكل عروس</p>
                         </div>
                     </div>
                 </div>
