--- a/project-echo-des-poupees.html
+++ b/project-echo-des-poupees.html
@@ -135,10 +135,8 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع Écho des poupées</h4>
-                            <p class="text-muted mb-3">المجموعة تستحضر أجواء مسرح الدمى الكلاسيكي حيث تمتزج البراءة بالخيال وتُروى القصص بالخيوط والدانتيل.</p>
-                            <p class="text-muted mb-3">كل فستان صُمم بروح ناعمة كأن من ترتديه دمية بورسلين نزلت لتعيش حكايتها الخاصة خارج خشبة المسرح.</p>
-                            <p class="text-muted">الألوان الحالمة والطبقات المتدرجة تمنح الأزياء حضورًا استعراضيًا ساحرًا يناسب العروض الترفيهية.</p>
-                        </div>
+                            <p class="text-muted mb-3"> تُجسّد أزيائي الاستعراضية المستوحاة من طراز "لوليتا" مشهدًا ساحرًا كأنّه مأخوذ من قلب مسرح دمى كلاسيكي، حيث تمتزج البراءة بالخيال، وتُروى القصص من خلال الخيوط والدانتيل بدلًا من الكلمات. كل فستان في هذه المجموعة يُصمَّم بروح ناعمة، وكأن من ترتديه دمية بورسلين نزلت من على خشبة المسرح لتعيش حكايتها الخاصة.</p>
+                            </div>
                     </div>
                 </div>
             </div>
