--- a/project-eclav.html
+++ b/project-eclav.html
@@ -135,10 +135,8 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع Éclav</h4>
-                            <p class="text-muted mb-3">يستمد مشروع Éclav إلهامه من زهرة الخزامى رمز الجمال الطبيعي في المملكة، بألوانها الهادئة وأناقتها الناعمة.</p>
-                            <p class="text-muted mb-3">تجمع التصاميم بين أنوثة المرأة العصرية وثقتها، مع توظيف تقنية الريزن على هيئة كرستالات لامعة تضيف بعدًا فنيًا مبتكرًا.</p>
-                            <p class="text-muted">تمزج المجموعة بين الأصالة والحداثة بروح سعودية معاصرة، لتخلق أزياء متوازنة بين الرقي والابتكار.</p>
-                        </div>
+                            <p class="text-muted mb-3">نبذة عن المشروع: المشروع يركز على تصميم أزياء نسائية مستوحاة من زهرة الخزامى، رمز الجمال الطبيعي في المملكة العربية السعودية، والتي تعبر عن الرقي والصفاء. تستلهم المجموعة من تدرجات ألوانها الهادئة وشكلها الخلاب لتجسد أنوثة المرأة العصرية بثقة وأناقة، مع توظيف تقنية الريزن على شكل كرستالات لامعه متنوعه وجميله وايضا على الاقمشه لإضفاء لمسة فنية مبتكرة تعكس توازن الأصالة والحداثة و الابتكار بروح سعودية معاصرة</p>
+                            </div>
                     </div>
                 </div>
             </div>
@@ -157,7 +155,7 @@
                                 </div>
                                 <div class="flex-1 content text-start">
                                     <h6 class="title fw-bold mb-0">أسماء المصممتين</h6>
-                                    <span class="text-primary">أثير مجرشي · ديم محمد</span>
+                                    <span class="text-primary">أثير مجرشي · ديم آل محمد</span>
                                 </div>
                             </div>
                             <div class="d-flex contact-detail align-items-center mt-3 justify-content-center">
