--- a/project-hanaya.html
+++ b/project-hanaya.html
@@ -127,10 +127,10 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع حنايا</h4>
-                            <p class="text-muted mb-3">وُلدت حنايا من نسيم المزارع ودفء النخيل في القصيم لتحول سكون المكان إلى أزياء تحتضن المشاعر.</p>
-                            <p class="text-muted mb-3">كل تصميم يروي حنان الأرض وضياء الشمس حين تنعكس على سعف النخيل، مانحًا المرأة إيقاعًا أنيقًا متصلًا بجذورها.</p>
-                            <p class="text-muted">المجموعة رحلة فنية تنسج الخيال بالواقع لتليق بالمرأة العصرية الباحثة عن الجمال المرتبط بروحها.</p>
-                        </div>
+                            <p class="text-muted mb-3">من بين نسيم المزارع ودفء النخيل وهدوء الطبيعة، وُلد مشروعي "حنايا"، مجموعة أزياء تنبض بالحياة، وتحتضن المشاعر كما تحتضن الأرض غراسها. من تأمل التفاصيل البسيطة في مزارع القصيم، حيث تنحني النخلة في حنانٍ للأرض التي احتضنتها، انطلقت فكرة هذا العمل.
+ "حنايا" ليست مجرد مجموعة أزياء، بل حكاية دفءٍ وحنينٍ تُترجم مشاعر المكان إلى أقمشة تنبض بالعاطفة. فكل تصميم يروي حنان الأرض وسكون المساء وضياء الشمس حين تنعكس على سعف النخيل.
+ هي رحلة فنية تنسج الخيال بالواقع، وتحوّل سكون المزرعة إلى إيقاع أنيق يليق بالمرأة العصرية التي تبحث عن الجمال المتصل بجذورها وروحها.</p>
+                            </div>
                     </div>
                 </div>
             </div>
@@ -142,7 +142,16 @@
                     <div class="col-lg-8 col-md-10">
                         <div class="title-heading text-center">
                             <h4 class="mb-4">معلومات الاتصال</h4>
-                            <p class="text-muted">للتواصل مع المصممة ليان الشبرمي استخدمي التفاصيل أدناه.</p>
+                            <p class="text-muted">للتواصل مع فريق حنايا استخدموا التفاصيل أدناه.</p>
+                            <div class="d-flex contact-detail align-items-center mt-4 justify-content-center">
+                                <div class="icon">
+                                    <i class="uil uil-user-circle fea icon-m-md text-dark me-3"></i>
+                                </div>
+                                <div class="flex-1 content text-start">
+                                    <h6 class="title fw-bold mb-0">اسم المصممة</h6>
+                                    <span class="text-primary">ليان خالد الشبرمي</span>
+                                </div>
+                            </div>
                             <div class="d-flex contact-detail align-items-center mt-4 justify-content-center">
                                 <div class="icon">
                                     <i class="uil uil-phone fea icon-m-md text-dark me-3"></i>
