--- a/project-htaf.html
+++ b/project-htaf.html
@@ -135,10 +135,8 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع هتاف</h4>
-                            <p class="text-muted mb-3">مشروع هتاف يقدم أزياء وطنية مستوحاة من معالم الدرعية التاريخية ليعكس أصالة التراث السعودي.</p>
-                            <p class="text-muted mb-3">تجمع التصاميم بين الفخامة والهوية، وتعيد قراءة التفاصيل المعمارية بروح معاصرة تحافظ على جوهر المكان.</p>
-                            <p class="text-muted">كل قطعة تهتف بانتماء المرأة لوطنها وتقدم تجربة أناقة حديثة ذات جذور عميقة.</p>
-                        </div>
+                            <p class="text-muted mb-3">مشروعنا يقدّم تصاميم أزياء وطنية مستوحاة من معالم الدرعية التاريخية، تعبّر عن أصالة التراث السعودي بأسلوب حديث يجمع بين الفخامة والهوية</p>
+                            </div>
                     </div>
                 </div>
             </div>
