--- a/project-laveh.html
+++ b/project-laveh.html
@@ -127,10 +127,9 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع Lav&egrave;h</h4>
-                            <p class="text-muted mb-3">Lav&egrave;h يقدم تصاميم متعددة الاستخدام لمضيفات الطيران تعكس روح الانضباط والأناقة بتدرجات لافندر هادئة.</p>
-                            <p class="text-muted mb-3">تتميز المجموعة بقدرتها على التحول بانسيابية من زي رسمي أنيق أثناء الخدمة إلى إطلالة سهرة فاخرة دون التفريط بالهوية.</p>
-                            <p class="text-muted">تجمع القطع بين الابتكار والوظيفية لتمنح المضيفة حريتها في التعبير عن شخصيتها، مع الحفاظ على معايير الرقي والاحتراف.</p>
-                        </div>
+                            <p class="text-muted mb-3">يقدّم هذا المشروع تصاميم متنوعه  من ازياء مضيفات الطيران يعكس روح الانضباط والأناقة بطابع عصري يحمل تدرجات اللافندر الهادئة
+يتميز التصميم بقدرته على التحول بانسيابية من زي رسمي أنيق إلى إطلالة سهرة فاخرة تجمع بين الرقي والابتكار في آنٍ واحد</p>
+                            </div>
                     </div>
                 </div>
             </div>
@@ -167,8 +166,8 @@
                                 </div>
                                 <div class="flex-1 content text-start">
                                     <h6 class="title fw-bold mb-0">أرقام التواصل</h6>
-                                    <a href="tel:0580109411" class="text-primary d-block">0580109411</a>
-                                    <a href="tel:0578440158" class="text-primary">0578440158</a>
+                                    <a href="tel:0580109411" class="text-primary d-block">مريم 0580109411</a>
+                                    <a href="tel:0578440158" class="text-primary">رنا 0578440158</a>
                                 </div>
                             </div>
                         </div>
