--- a/project-mystic-circus.html
+++ b/project-mystic-circus.html
@@ -135,9 +135,9 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع Mystic Circus</h4>
-                            <p class="text-muted mb-3">المجموعة تدمج بين سحر السيرك وطابع لوليتا لتقدم إطلالات استعراضية غنية بالخيال والألوان الحالمة.</p>
-                            <p class="text-muted mb-3">تمنح التفاصيل الدقيقة والقصات المدروسة المؤديات حضورًا بصريًا جذابًا يلائم العروض الترفيهية المختلفة.</p>
-                            <p class="text-muted">كل فستان يروي حكاية مشبعة بالفرح والدهشة ليحول المسرح إلى عالم من الأحلام.</p>
+                            <p class="text-muted mb-3">The concept of the Mystic Circus collection is based on designing performance costumes for entertainment events, inspired by the aesthetics of Lolita fashion blended with the magical atmosphere of the circus. The name derives from combining the joy and liveliness of the circus with the dreamy quality 
+.reflected in the soft pastel colors</p>
+                            <p class="text-muted mb-3">The idea was chosen to add visual appeal and performative elegance suitable for entertainment shows.</p>
                         </div>
                     </div>
                 </div>
