--- a/project-najd-aura.html
+++ b/project-najd-aura.html
@@ -135,10 +135,8 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع Najd Aura</h4>
-                            <p class="text-muted mb-3">Najd Aura يهدف إلى ابتكار تصاميم استعراضية مستوحاة من الأزياء النسائية التقليدية في نجد بروح معاصرة.</p>
-                            <p class="text-muted mb-3">المجموعة توازن بين الأصالة والحداثة لتجسد الهوية الثقافية السعودية أمام العالم.</p>
-                            <p class="text-muted">كل تصميم صُمم ليحمل توقيعًا بصريًا واضحًا يناسب المحافل المحلية والدولية.</p>
-                        </div>
+                            <p class="text-muted mb-3">مشروع «نجد أورا» يهدف إلى ابتكار تصاميم استعراضية إبداعية مستوحاة من الأزياء التقليدية النسائية في المنطقة الوسطى من المملكة العربية السعودية. تمثل هذه الأزياء مزيجًا بين أصالة التراث وروح الحداثة، حيث صُممت خصيصًا ليرتديها رواد المحافل المحلية والدولية لتجسيد الهوية الثقافية السعودية وإبراز جمالياتها أمام العالم بطريقة استعراضية مبتكرة.</p>
+                            </div>
                     </div>
                 </div>
             </div>
