--- a/project-palourde.html
+++ b/project-palourde.html
@@ -127,10 +127,8 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع palourde</h4>
-                            <p class="text-muted mb-3">Palourde علامة سعودية راقية متخصصة في تصميم أزياء السهرة الفاخرة، مستوحاة من الجمال البنائي لحبات اللؤلؤ وما تحمله من رمزية للنقاء والأناقة.</p>
-                            <p class="text-muted mb-3">تدمج المجموعة بين الفن والهندسة البنيوية لتقديم قطع فريدة تعبّر عن الأنوثة، الفخامة، والانسيابية من خلال تفاصيل دقيقة وتقنيات متقنة.</p>
-                            <p class="text-muted">تُستثمر تقنيات الشك اليدوي بالكريستال والخرز والتطريز الدقيق لإبراز عمق كل تصميم ومنح كل قطعة حضورًا متألّقًا.</p>
-                        </div>
+                            <p class="text-muted mb-3">يُعد مشروع بالورد (Palourde) علامة سعودية راقية متخصصة في تصميم أزياء السهرة الفاخرة، مستوحاة من الجمال البنائي لحبّات اللؤلؤ وما تحمله من رمزية للنقاء والأناقة. يدمج المشروع بين الفن والهندسة البنيوية في تصاميمه، ليقدّم قطعًا فريدة تعبّر عن الأنوثة، الفخامة، والانسيابية بتفاصيل دقيقة وتقنيات حديثة مثل الشك اليدوي بالكريستال والخرز، والتطريز الدقيق،</p>
+                            </div>
                     </div>
                 </div>
             </div>
