--- a/project-qoawam.html
+++ b/project-qoawam.html
@@ -63,57 +63,49 @@
                         <div class="tiny-six-item">
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/qawam/0T1A2391.JPG" class="img-fluid" alt="تصميم قّوام 1">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 1</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 1</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/qawam/0T1A2595.JPG" class="img-fluid" alt="تصميم قّوام 2">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 2</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 2</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotios-photos-1090638.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/qawam/0T1A2738.JPG" class="img-fluid" alt="تصميم قّوام 3">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 3</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 3</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-maksgelatin-4352247.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/qawam/0T1A2744.JPG" class="img-fluid" alt="تصميم قّوام 4">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 4</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 4</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-diva-33964231.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/qawam/0T1A2811.JPG" class="img-fluid" alt="تصميم قّوام 5">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 5</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 5</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/qawam/0T1A2857.JPG" class="img-fluid" alt="تصميم قّوام 6">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 6</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
-                                    <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 7</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 6</a>
                                     </div>
                                 </div>
                             </div>
@@ -135,10 +127,8 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع قّوام</h4>
-                            <p class="text-muted mb-3">قّوام وُلد من فكرة أن الجمال لا يتعارض مع العلاج، إذ يدمج الدعامة الطبية للجنف ضمن فساتين سهرة أنيقة.</p>
-                            <p class="text-muted mb-3">المجموعة تمنح الفتيات ثقة متجددة بدمج الحل الطبي في التصميم ليصبح جزءًا داعمًا من الإطلالة لا قيدًا عليها.</p>
-                            <p class="text-muted">الهدف إعادة تعريف الأناقة والعناية الذاتية في تجربة واحدة تجمع الراحة والجمال.</p>
-                        </div>
+                            <p class="text-muted mb-3">مشروع “قَوام” وُلد من فكرة أن الجمال لا يتعارض مع العلاج. نسعى فيه إلى ابتكار فساتين سهرة مخصصة لمرضى الجنف تُدمج فيها الدعامة الطبية بأسلوب أنيق وعملي في آن واحد. يهدف المشروع إلى إعادة تعريف الثقة والأناقة للفتيات المصابات، ليشعرن بأن الدعامة جزء من إطلالتهن لا قيدًا عليها. فـ”قَوام” ليس مجرد تصميم، بل تجربة تمزج بين الراحة، العلاج، والجمال</p>
+                            </div>
                     </div>
                 </div>
             </div>
