--- a/project-ramla.html
+++ b/project-ramla.html
@@ -63,57 +63,25 @@
                         <div class="tiny-six-item">
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/ramlah/1Y5A4098 copy.JPEG" class="img-fluid" alt="تصميم رملة 1">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 1</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 1</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/ramlah/1Y5A4158 copy.JPEG" class="img-fluid" alt="تصميم رملة 2">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 2</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 2</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotios-photos-1090638.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/ramlah/1Y5A4202 copy 3.JPEG" class="img-fluid" alt="تصميم رملة 3">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 3</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-maksgelatin-4352247.jpg" class="img-fluid" alt="صورة المشروع">
-                                    <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 4</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-diva-33964231.jpg" class="img-fluid" alt="صورة المشروع">
-                                    <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 5</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
-                                    <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 6</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
-                                    <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 7</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 3</a>
                                     </div>
                                 </div>
                             </div>
@@ -135,9 +103,12 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع رملة</h4>
-                            <p class="text-muted mb-3">من أعماق الصحراء ولدت رملة لتترجم سكون الرمال وبريقها إلى تصاميم سهرة تنبض بالفخامة والأنوثة والرقي.</p>
-                            <p class="text-muted mb-3">تعكس المجموعة رؤية مصممتها في تقديم الصحراء بروح معاصرة بعيدة عن الطابع التراثي عبر أقمشة فاخرة كتفته السيراميك والمخمل الحريري والكريب الإندونيسي.</p>
-                            <p class="text-muted">تستهدف رملة المرأة العصرية الباحثة عن أناقة متفرّدة تجسد هدوءها وقوتها لموسم ربيع/صيف 2026.</p>
+                            <p class="text-muted mb-3">من أعماق الصحراء، حيث يلتقي السكون بجلال الأفق وتتماوج الرمال تحت ضوء الشمس الذهبي، ولدت فكرة رملة؛ مجموعة تستحضر سحر الطبيعة لتترجمه إلى تصاميم سهرة تنبض بالفخامة والأنوثة والرقي. رؤية فنية تعيد صياغة الجمال الصحراوي بلغة عصرية تمزج بين الأصالة والحداثة، وبين القوة والنعومة في توازن أنثوي يعكس هوية فريدة.</p>
+                            <p class="text-muted mb-3">اخترت اسم رملة لأنه الأقرب إلى إحساسي كمصممة؛ فالرمال بالنسبة لي ليست مجرد مكوّن من مكونات الصحراء، بل رمز للحياة الكامنة وسط السكون، وللأنوثة الهادئة التي تجمع بين البساطة والخلود.
+
+تعكس المجموعة رؤيتي في تقديم الصحراء بروحٍ معاصرة بعيدة عن الطابع التراثي، من خلال تفاصيل تعبّر عن الانسيابية والجمال الهادئ. اعتمدت في التصاميم على مزيجٍ من الأقمشة الفاخرة مثل المخمل الحريري، وتفته السيراميك، والكريب الإندونيسي، لتجسيد تدرجات الأفق وبريق الرمال في توازنٍ بين الخفة والفخامة.</p>
+                            <p class="text-muted">تستهدف رملة المرأة العصرية التي تبحث عن الأناقة المتفرّدة وتعبّر بثقتها عن هدوئها وقوتها.
+صُمّمت المجموعة لموسم ربيع/صيف 2026 لتجسّد طاقة الصحراء المشرقة في لوحة من الضوء والأنوثة والفخامة الراقية.</p>
                         </div>
                     </div>
                 </div>
@@ -151,6 +122,15 @@
                         <div class="title-heading text-center">
                             <h4 class="mb-4">معلومات التواصل</h4>
                             <p class="text-muted">للاستفسارات أو التعاون مع رملة يرجى استخدام القنوات التالية.</p>
+                            <div class="d-flex contact-detail align-items-center mt-4 justify-content-center">
+                                <div class="icon">
+                                    <i class="uil uil-user-circle fea icon-m-md text-dark me-3"></i>
+                                </div>
+                                <div class="flex-1 content text-start">
+                                    <h6 class="title fw-bold mb-0">اسم المصممة</h6>
+                                    <span class="text-primary">غرام سالم</span>
+                                </div>
+                            </div>
                             <div class="d-flex contact-detail align-items-center mt-4 justify-content-center">
                                 <div class="icon">
                                     <i class="uil uil-phone fea icon-m-md text-dark me-3"></i>
