--- a/project-rassekh.html
+++ b/project-rassekh.html
@@ -135,10 +135,8 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع راسخ</h4>
-                            <p class="text-muted mb-3">يمثل “راسخ” رؤية مبتكرة تستلهم قوة الجذور السعودية وعمقها الثقافي لينعكس في أزياء Streetwear معاصرة.</p>
-                            <p class="text-muted mb-3">يُدمج المشروع أصالة أزياء المنطقة الوسطى مع روح الحداثة ليحافظ على ثبات الهوية وتواجدها في وجدان أبنائها.</p>
-                            <p class="text-muted">كل تصميم يُترجم تراثنا إلى قطع معاصرة تبقى راسخة في الذاكرة والذوق، وترافق ذائقة الجيل الجديد.</p>
-                        </div>
+                            <p class="text-muted mb-3">مثل مشروع “راسخ” رؤية مبتكرة تستلهم قوة الجذور السعودية وعمقها الثقافي في الأزياء، بدمج أصالة أزياء المنطقة الوسطى مع روح الحداثة في الـStreetwear. جاءت التسمية إشارةً إلى ثبات الهوية السعودية في وجدان أبنائها وترجمتها إلى تصاميم معاصرة تبقى راسخة في الذاكرة والذوق.</p>
+                            </div>
                     </div>
                 </div>
             </div>
