--- a/project-rawayat-alrayah.html
+++ b/project-rawayat-alrayah.html
@@ -135,10 +135,8 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع رواية الراية</h4>
-                            <p class="text-muted mb-3">مجموعة رواية الراية هي رحلة استعراضية سينمائية تعكس المشاعر المصاحبة لمراحل توحيد المملكة.</p>
-                            <p class="text-muted mb-3">تجسد التصاميم لحظات الفخر والعزيمة عبر تفاصيل مسرحية وحضور بصري قوي يواكب هوية الوطن.</p>
-                            <p class="text-muted">كل قطعة تحكي فصلًا من رواية التوحيد لتعيد إحياء الذاكرة بأسلوب معاصر مؤثر.</p>
-                        </div>
+                            <p class="text-muted mb-3">مشروع مجموعة ازياء استعراضية سينمائية تعكس المشاعر المصاحبة لمراحل توحيد المملكة </p>
+                            </div>
                     </div>
                 </div>
             </div>
