--- a/project-ruh-hayil.html
+++ b/project-ruh-hayil.html
@@ -63,57 +63,66 @@
                         <div class="tiny-six-item">
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/مشروع روح حائل في سمو الفروسية/2917d90d-6404-4e95-9317-3b8ce2380eab.JPG" class="img-fluid" alt="تصميم روح حائل 1">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 1</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 1</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/مشروع روح حائل في سمو الفروسية/9702cae6-da3a-4b8f-a085-b9ec1c488b3b.JPG" class="img-fluid" alt="تصميم روح حائل 2">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 2</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 2</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotios-photos-1090638.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/مشروع روح حائل في سمو الفروسية/9bf8dc76-0915-4b89-b091-ecd0be84866d.JPG" class="img-fluid" alt="تصميم روح حائل 3">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 3</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 3</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-maksgelatin-4352247.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/مشروع روح حائل في سمو الفروسية/b4602f69-5af0-4ed1-bbab-45d662f0d4a7.JPG" class="img-fluid" alt="تصميم روح حائل 4">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 4</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 4</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-diva-33964231.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/مشروع روح حائل في سمو الفروسية/cef02ddc-5558-461a-82e5-67ea41aed2db.JPG" class="img-fluid" alt="تصميم روح حائل 5">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 5</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 5</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/مشروع روح حائل في سمو الفروسية/d529e3ed-c95d-4cd6-aef7-c28a24a6dd9a.JPG" class="img-fluid" alt="تصميم روح حائل 6">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 6</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 6</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/مشروع روح حائل في سمو الفروسية/2917d90d-6404-4e95-9317-3b8ce2380eab.JPG" class="img-fluid" alt="تصميم روح حائل 7">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 7</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 7</a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="tiny-slide">
+                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
+                                    <img src="assets/images/مشروع روح حائل في سمو الفروسية/9702cae6-da3a-4b8f-a085-b9ec1c488b3b.JPG" class="img-fluid" alt="تصميم روح حائل 8">
+                                    <div class="content">
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 8</a>
                                     </div>
                                 </div>
                             </div>
@@ -135,10 +144,8 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع روح حائل في سمو الفروسية</h4>
-                            <p class="text-muted mb-3">يسعى المشروع إلى تصميم أزياء فروسية مستوحاة من الأزياء التقليدية في منطقة حائل، ليجسد روح التراث العريق ويمزجه مع متطلبات العصر الحديث.</p>
-                            <p class="text-muted mb-3">يحمل الاسم تلاقي الهوية الحائلية مع السمو المرتبط بالفروسية والخيل العربي الأصيل، رمز النبل والقوة في الثقافة العربية.</p>
-                            <p class="text-muted">النتيجة هي تصاميم تحافظ على الأصالة وتقدم تجربة معاصرة تعبّر عن جمال المكان وروح الإنسان.</p>
-                        </div>
+                            <p class="text-muted mb-3">مشروع " رُوح حائل في سُمو الفروسية " يهدف إلى تصميم أزياء فروسية مستوحاة من الأزياء التقليدية في منطقة حائل، حيث يجسد المشروع روح التراث العريق ويمزجه مع متطلبات العصر الحديث جاء الاسم ليعكس الجمع بين روح المكان و الهوية الحائلية و السمو المرتبط بالفروسية و الخيل العربي الأصيل ، با عتبارها رمزاً للنبل و القوة في الثقافة العربية.</p>
+                            </div>
                     </div>
                 </div>
             </div>
