--- a/project-saf.html
+++ b/project-saf.html
@@ -127,10 +127,8 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع ساف</h4>
-                            <p class="text-muted mb-3">ساف يستلهم فكرته من حرفة الخوص العريقة حيث يجتمع النسيج بين الخيوط الظاهرة والخفية ليحافظ على تماسكه وقوته.</p>
-                            <p class="text-muted mb-3">تعكس التصاميم قصص صبر ومهارة عبر تفاصيل دقيقة تمنح كل قطعة معنى عاطفيًا يعيد قراءة التراث بصورة حديثة.</p>
-                            <p class="text-muted">تمتزج المواد الطبيعية باللمسات المعاصرة لتقدم أزياء تحافظ على روح الحرفة وتطلقها في إطار إبداعي يناسب المرأة اليوم.</p>
-                        </div>
+                            <p class="text-muted mb-3">الفكرة مستوحاة من الخوص، الحرفة التراثية التي توارثتها الأجيال، حيث يجمع النسيج بين الخيوط الظاهرة والخفية ليحافظ على تماسكه وقوته. كل قطعة تحكي قصة صبر ومهارة، وتلهم تصاميم معاصرة تحافظ على أصالة التراث وروحه.</p>
+                            </div>
                     </div>
                 </div>
             </div>
