--- a/project-sarmadan.html
+++ b/project-sarmadan.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Sarmadan يعيد إحياء الحكايات والأساطير السعودية في أزياء مسرحية فنية تنبض بالحبر الذكي.">
         <meta name="keywords" content="Sarmadan، حكايات شعبية، أزياء مسرحية، تصميم سعودي">
-        <meta name="author" content="الدانه فهيد، لجين زاحم">
+        <meta name="author" content="الدانه بن فهيد، لجين زاحم">
 
         <link rel="shortcut icon" href="assets/images/favicon.ico">
         <link href="assets/libs/tiny-slider/tiny-slider.css" rel="stylesheet">
@@ -63,57 +63,49 @@
                         <div class="tiny-six-item">
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/sarmadan/1 2.png" class="img-fluid" alt="تصميم Sarmadan 1">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 1</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 1</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/sarmadan/4.png" class="img-fluid" alt="تصميم Sarmadan 2">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 2</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 2</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotios-photos-1090638.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/sarmadan/6.png" class="img-fluid" alt="تصميم Sarmadan 3">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 3</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 3</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-maksgelatin-4352247.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/sarmadan/8.png" class="img-fluid" alt="تصميم Sarmadan 4">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 4</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 4</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-diva-33964231.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/sarmadan/19.png" class="img-fluid" alt="تصميم Sarmadan 5">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 5</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 5</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/sarmadan/Untitled-2 copy.jpg" class="img-fluid" alt="تصميم Sarmadan 6">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 6</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
-                                    <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 7</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 6</a>
                                     </div>
                                 </div>
                             </div>
@@ -135,10 +127,10 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع Sarmadan</h4>
-                            <p class="text-muted mb-3">سرمدان يعيد بعث الحكايات الشعبية والأساطير السعودية في أزياء مسرحية فنية نابضة بالحبر الذكي.</p>
-                            <p class="text-muted mb-3">تمتزج العناصر التراثية مع التقنيات الحديثة لتقدم رؤية تعبيرية معاصرة تعكس فخر الانتماء.</p>
-                            <p class="text-muted">كل تصميم يستحضر سردًا جديدًا للحكاية، ليبقى أثرها ممتدًا على خشبة المسرح وفي ذاكرة الجمهور.</p>
-                        </div>
+                            <p class="text-muted mb-3">سرمدان، حيث تُبعث الحكايات الشعبية والأساطير السعودية من جديد، لتتجسّد في أزياء فنية مسرحية 
+تنبض بالحبر الذكي.</p>
+<p class="text-muted mb-3">Sarmadan — where Saudi folklore and legends are reborn, embodied through artistic theatrical garments that come alive with smart ink.</p>
+                           </div>
                     </div>
                 </div>
             </div>
@@ -157,7 +149,7 @@
                                 </div>
                                 <div class="flex-1 content text-start">
                                     <h6 class="title fw-bold mb-0">أسماء المصممتين</h6>
-                                    <span class="text-primary">الدانه فهيد · لجين زاحم</span>
+                                    <span class="text-primary">الدانه بن فهيد · لجين زاحم</span>
                                 </div>
                             </div>
                             <div class="d-flex contact-detail align-items-center mt-3 justify-content-center">
