--- a/project-stelora.html
+++ b/project-stelora.html
@@ -135,10 +135,8 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع Stelora</h4>
-                            <p class="text-muted mb-3">Stelora يستوحي رموز جبل عِكمه في العُلا ليقدم أزياء سهرة تعكس الطابع السعودي الأصيل بلغة مبتكرة.</p>
-                            <p class="text-muted mb-3">تعتمد المجموعة على تفاصيل فاخرة وخطوط انسيابية تُبرز الثقة والأناقة، وتجمع بين جمال التراث وروح الحداثة.</p>
-                            <p class="text-muted">تصاميم Stelora تمنح المرأة حضورًا عالميًا مع الحفاظ على هويتها الثقافية المميزة.</p>
-                        </div>
+                            <p class="text-muted mb-3">مشروع تصميم أزياء سهرة مستوحاة من نقوش جبل عِكمه في العُلا، يهدف إلى إبراز الطابع السعودي الأصيل من خلال تصاميم فاخرة وعصرية تمزج بين جمال التراث وروح الحداثة. تعكس الأزياء عمق الثقافة والتاريخ السعودي بأسلوب راقي يواكب اتجاهات الموضة العالمية</p>
+                            </div>
                     </div>
                 </div>
             </div>
