--- a/project-terhab.html
+++ b/project-terhab.html
@@ -135,9 +135,7 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع ترحاب</h4>
-                            <p class="text-muted mb-3">ترحاب مشروع يستلهم جمال المباخر التراثية كرمز للكرم والأصالة، ويحوّلها إلى أزياء سهرة راقية تحتفي بالحرف اليدوية السعودية بلمسة معاصرة.</p>
-                            <p class="text-muted mb-3">تجمع المجموعة بين ثقافة المنطقة الوسطى والغربية في تناغم بصري واحد، حيث تتداخل الخطوط والزخارف لتمنح كل إطلالة عبير التراث.</p>
-                            <p class="text-muted">تم ابتكار كل قطعة لتعبّر عن الضيافة السعودية وروح الاحتفاء، وتمنح المرأة حضورًا أنيقًا يعكس هويتها الأصيلة.</p>
+                            <p class="text-muted mb-3">ترحاب من إبداع المصممتين رغد أبوقيان وريما الشريف، يستلهم جمال المباخر التراثية كرمز للكرم والأصالة، بدمجٍ فني بين ثقافة المنطقتين الوسطى والغربية. نقدم من خلاله أزياء سهرة راقية تحتفي بالحرف اليدوية بروح عصرية تعبّر عن الهوية السعودية وتفوح بعبير التراث.</p>
                         </div>
                     </div>
                 </div>
