--- a/project-the-line.html
+++ b/project-the-line.html
@@ -135,9 +135,10 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع the line</h4>
-                            <p class="text-muted mb-3">يُطلق مشروع the line روح المستقبل من قلب مدينة ذا لاين في نيوم، حيث تتحول خطوط المدينة المعمارية إلى أزياء نسائية عصرية تنبض بالحداثة والابتكار.</p>
-                            <p class="text-muted mb-3">تمتزج الخطوط الهندسية الدقيقة مع الانسيابية الأنثوية في كل قطعة، لتجسّد رؤية المملكة 2030 في مزيج بصري يجمع بين التجريد، والبساطة، والفخامة.</p>
-                            <p class="text-muted">تقنيات الشك والتطريز تحيي تفاصيل مستوحاة من عمق العمارة، فتمنح المجموعة هوية هندسية راقية تلائم المرأة السعودية الواثقة في موسم خريف وشتاء 2026.</p>
+                            <p class="text-muted mb-3">يطلق هذا المشروع روح المستقبل عبر مجموعة أزياء نسائية عصرية تستمد جمالها من مدينة ذا لاين في نيوم، المدينة التي تختزل رؤية المملكة 2030 في خطٍ واحد ينبض بالحداثة والإبداع.
+تتشكل التصاميم كامتداد بصري لخطوط المدينة المعمارية، حيث يلتقي الانسياب بالهندسة، والبساطة بالفخامة، والتجريد بلمسة أنثوية واعية.
+وتبرز تقنيات الشك والتطريز كأداة لإحياء تفاصيل مستوحاة من عمق العمارة، فتمنح كل قطعة حضورًا هندسيًا راقيًا يلامس المستقبل من أطرافه.
+صُممت هذه المجموعة للمرأة السعودية الواثقة، التي ترى في الأزياء لغة تعبّر عن هويتها الحديثة، وتتناغم مع موسم خريف وشتاء 2026 بإحساس فني يعكس تفرّدها وأناقتها المتقدّمة نحو الغد .</p>
                         </div>
                     </div>
                 </div>
