--- a/project-wesal.html
+++ b/project-wesal.html
@@ -127,9 +127,16 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع وِصال</h4>
-                            <p class="text-muted mb-3">وِصال هو لحظة التقاء الماضي بالحاضر حيث تُجسّد الأزياء هوية المكان والإنسان. كل نقش يحمل صدى قصة قديمة، وكل خيط يمتد ليبني وصالًا بيننا وبين تراثنا.</p>
-                            <p class="text-muted mb-3">تحتفي المجموعة بجمال الدرعية وتعيد تقديم تفاصيلها بروح معاصرة تحافظ على الأصالة وتواكب الزمن.</p>
-                            <p class="text-muted">يُدمج المشروع ملامح التراث السعودي العريق مع الهدوء والدقة المستوحاة من الثقافة اليابانية، ليولد حوارًا بصريًا يجمع عمق الهوية بصفاء الشرق.</p>
+                            <p class="text-muted mb-3">“وِصال”
+لحظة التقاء الماضي بالحاضر، في تجربة تُجسّد هوية المكان والإنسان.
+</p>
+                            <p class="text-muted mb-3">
+في كل نقشٍ من تراثنا صدى قصةٍ قديمة، وفي كل خيطٍ يمتدّ وِصالٌ بيننا وبينها.
+مشروع “وِصال” يحتفي بجمال الدرعية وتفاصيلها، ويعيد تقديمها بروحٍ معاصرة تواكب الزمن وتحفظ الأصالة،
+من خلال دمج ملامح التراث السعودي العريق بلمساتٍ مستوحاة من الثقافة اليابانية،
+حيث يلتقي الشرقان في حوارٍ بصريٍ واحد يجمع الهدوء والدقة بالعمق والهوية.
+</p>
+
                         </div>
                     </div>
                 </div>
