--- a/project-whisper-of-dew.html
+++ b/project-whisper-of-dew.html
@@ -127,10 +127,9 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع Whisper of dew</h4>
-                            <p class="text-muted mb-3">Whisper of dew مجموعة من أزياء السهرة تستلهم جمال قطرات الندى رمزًا للنقاء وتحوّل لمعانها الرقيق إلى تفاصيل فنية ساحرة.</p>
-                            <p class="text-muted mb-3">تنساب التصاميم بخطوط ناعمة ومواد شفافة تعكس أنوثة لطيفة وفريدة، بينما تضيف اللمسات اللامعة إحساسًا بالانتعاش الصباحي.</p>
-                            <p class="text-muted">في كل قطعة يلتقي الإحساس بالطبيعة مع البساطة الراقية، ليولد حضورًا مميزًا يحتفي بالهدوء والجاذبية الآسرة.</p>
-                        </div>
+                            <p class="text-muted mb-3">‎مجموعة أزياء سهرة تستلهم جمال قطرات الندى رمزًا للنقاء. تجسّد أناقة انسيابية الندى ولمعانه لتعبّر عن أنوثة رقيقة وفريدة.
+</p>
+                            </div>
                     </div>
                 </div>
             </div>
