--- a/project-alpha.html
+++ b/project-alpha.html
@@ -63,57 +63,49 @@
                         <div class="tiny-six-item">
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/alpha/_MG_4968 (1).png" class="img-fluid" alt="تصميم ALPHA 1">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 1</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 1</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/alpha/_MG_5002.png" class="img-fluid" alt="تصميم ALPHA 2">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 2</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 2</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotios-photos-1090638.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/alpha/_MG_5092.png" class="img-fluid" alt="تصميم ALPHA 3">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 3</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 3</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-maksgelatin-4352247.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/alpha/_MG_5390.png" class="img-fluid" alt="تصميم ALPHA 4">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 4</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 4</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-diva-33964231.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/alpha/_MG_5562.png" class="img-fluid" alt="تصميم ALPHA 5">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 5</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 5</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/alpha/IMG_2629.png" class="img-fluid" alt="تصميم ALPHA 6">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 6</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
-                                    <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 7</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">تفاصيل التصميم 6</a>
                                     </div>
                                 </div>
                             </div>
@@ -135,9 +127,7 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع الفا ALPHA</h4>
-                            <p class="text-muted mb-3">الفا ALPHA مشروع يترجم سحر خط المسند إلى لغة تصميم معاصرة، حيث تتحول الحروف العريقة إلى تفاصيل فنية تعكس قوة الحضور الأنثوي.</p>
-                            <p class="text-muted mb-3">تزدان الأزياء بروح التراث العربي، وتُصاغ بلمسة راقية تمزج بين الفخامة والأصالة لتستحضر الماضي في إطار حديث.</p>
-                            <p class="text-muted">كل تصميم هو احتفاء بالحرف العربي وبالمرأة التي ترى في الأزياء وسيلة للتعبير عن جذورها وثقتها وتطلعاتها.</p>
+                            <p class="text-muted mb-3">تنطلق فكرة المشروع من سحر خط المسند، الذي يجسّد عراقة الحضارة وجمال التراث العربي. تُترجم التصاميم روح هذا الخط إلى أزياء نسائية أنيقة تمزج بين الفخامة والأصالة، لتعبّر عن قوة الحرف وجمال الأنوثة في تناغم بين الماضي والحاضر</p>
                         </div>
                     </div>
                 </div>
