--- a/project-altawreeq.html
+++ b/project-altawreeq.html
@@ -135,10 +135,8 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع التوريق</h4>
-                            <p class="text-muted mb-3">مجموعة التوريق تجسد حوارًا بين الفن العربي الكلاسيكي وروح الأناقة المعاصرة حيث تتحول زخارف الأرابيسك إلى تفاصيل نابضة بالحياة.</p>
-                            <p class="text-muted mb-3">تستعيد التصاميم فخامة النقوش التاريخية وتعيد تقديمها بلغة أنثوية هادئة تعتمد التوازن بين الكلاسيكية والحداثة.</p>
-                            <p class="text-muted">تمنح الأقمشة المختارة بعناية ولمسات الخياطة الراقية كل قطعة حضورًا يعبر عن فخامة التراث في إطار معاصر.</p>
-                        </div>
+                            <p class="text-muted mb-3">مجموعة التوريق” تجسّد حوارًا راقيًا بين الفن العربي الكلاسيكي وروح الأناقة المعاصرة، حيث تتحوّل زخارف الأرابيسك إلى تصاميم تنبض بالفخامة والأنوثة الهادئة</p>
+                            </div>
                     </div>
                 </div>
             </div>
