--- a/project-neo-najd.html
+++ b/project-neo-najd.html
@@ -135,10 +135,8 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع Neo najd</h4>
-                            <p class="text-muted mb-3">Neo najd مشروع يسعى لإحياء التراث النجدي بأسلوب عصري مبتكر يمزج بين الأصالة والتقنيات الحديثة.</p>
-                            <p class="text-muted mb-3">تستكشف المجموعة جمال الموروث النجدي وتعيد صياغته في أزياء معاصرة تعكس روح الحداثة مع الحفاظ على الهوية.</p>
-                            <p class="text-muted">كل تصميم يعبر عن مزيج متناغم بين التفاصيل التقليدية والتعبير الفني الحديث، ليكون صوتًا للمستقبل rooted في جذور الماضي.</p>
-                        </div>
+                            <p class="text-muted mb-3">يهدف المشروع إلى إحياء التراث النجدي بأسلوب عصري مبتكر يمزج بين الأصالة والتقنيات الحديثة، لإبراز الهوية الثقافية السعودية في أزياء معاصرة تعكس روح الحداثة وجمال التراث.</p>
+                            </div>
                     </div>
                 </div>
             </div>
