--- a/project-rakeza.html
+++ b/project-rakeza.html
@@ -128,17 +128,15 @@
                 <div class="row align-items-center">
                     <div class="col-md-6 mb-4 mb-md-0">
                         <div class="me-lg-5 text-center text-md-start">
-                            <img src="assets/images/pexels-atbo-66986-245208.jpg" class="project-detail-logo" alt="شعار مشروع RAKEZA">
+                            <img src="assets/images/p20.jpg" class="project-detail-logo" alt="شعار مشروع RAKEZA">
                         </div>
                     </div>
 
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع RAKEZA | ركيزة</h4>
-                            <p class="text-muted mb-3">RAKEZA يستلهم جوهر العمارة النجدية والدمشقية ليحوّل تفاصيلها الهندسية والزخرفية إلى تصاميم معاصرة لربيع وصيف 2026.</p>
-                            <p class="text-muted mb-3">يسعى المشروع لإحياء التراث بروح حديثة توازن بين الأصالة والابتكار وتبرز هوية المرأة العربية في أبهى صورة.</p>
-                            <p class="text-muted">كل قطعة هي حوار بين الماضي والحاضر، حيث تتجسد الأبعاد المعمارية في أزياء أنيقة تعكس جرأة التصميم ودقته.</p>
-                        </div>
+                            <p class="text-muted mb-3">هو مشروع أزياء يستلهم جوهر العمارة النجدية والدمشقية، ليحوّل تفاصيلها الهندسية والزخرفية إلى تصاميم معاصرة لربيع وصيف 2026 يهدف المشروع إلى إحياء التراث بروح حديثة تُبرز التوازن بين الأصالة والابتكار في هوية المرأة العربية.</p>
+                            </div>
                     </div>
                 </div>
             </div>
