--- a/project-saraa-tharaa.html
+++ b/project-saraa-tharaa.html
@@ -127,9 +127,8 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع SARAA&amp;THARAA</h4>
-                            <p class="text-muted mb-3">اختير اسم SARAA&amp;THARAA للتعبير عن التوازن بين السمو والأصالة؛ فـ"سراء" ترمز لعلو عسير و"ثرى" تجسد ثبات نجد.</p>
-                            <p class="text-muted mb-3">استُلهمت المجموعة من الحدث الثقافي المصاحب لكأس العالم 2022 حيث برزت الرغبة في إبراز الهوية السعودية بأسلوب معاصر يليق بالمحافل العالمية.</p>
-                            <p class="text-muted">توظف التصاميم الزخارف المعمارية النجدية والعسيرية لتعيد إحياء التراث برؤية حديثة تعبر عن الفخر والانتماء قبل الانطلاق نحو كأس العالم 2034.</p>
+                            <p class="text-muted mb-3">اختير هذا الأسم للمجموعة ليعكس التوازن بين السمو والأصالة ، فـ«سَراء» يرمز إلى سمو و علو عسير ، بينما «ثَرى» يرمز إلى أصالة وثبات نجد.</p>
+                            <p class="text-muted mb-3">استُلهمت فكرة هذه المجموعة من الحدث الثقافي المصاحب لكأس العالم 2022 في قطر، حيث أبرز الحدث حضور الجماهير من مختلف الدول بأزياء ذات طابع الهوية الثقافية. ومن خلال هذا المشهد، برزت الرغبة في إبراز الهوية السعودية بأسلوب معاصر يعبّر عن ثقافة المرأة السعودية. تم تقديم تصاميم تعبّر عن الهوية السعودية بأسلوب معاصر يواكب الحدث العالمي كأس العالم 2034 ، حيث تم توظيف الزخارف المعمارية النجدية والعسيرية لتشكل محور الهوية البصرية للمجموعة. تم اختيار الزخارف المعمارية النجدية والعسيرية بعد ملاحظة الانتشار الواسع لاستخدامها في الآونة الأخيرة بأساليب لا تُبرز قيمتها الجمالية الأصيلة. لذا تسعى هذه المجموعة إلى إعادة إحياء التراث السعودي برؤية حديثة تُقدّر أصالته في قالب معاصر يُعبّر عن الفخر والانتماء.</p>
                         </div>
                     </div>
                 </div>
