--- a/project-sigfah.html
+++ b/project-sigfah.html
@@ -135,10 +135,9 @@
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
                             <h4 class="title mb-4">حول مشروع سِجفه</h4>
-                            <p class="text-muted mb-3">سِجفه رؤية فنية تعيد قراءة الهوية العربية والإسلامية من منظور معاصر، حيث تتلاقى صلابة الخطوط مع انسيابية القماش.</p>
-                            <p class="text-muted mb-3">كل تصميم هو تأمل في الزمن وجذور لا تذبل، وإبداع يتجدد باستمرار ليصوغ أناقة تحمل جوهر الأصالة بروح الحداثة.</p>
-                            <p class="text-muted">المجموعة تجسد حوارًا بين الثبات والتجدد لتمنح المرأة حضورًا متجذرًا ومتجددًا في الوقت ذاته.</p>
-                        </div>
+                            <p class="text-muted mb-3">سِجفَه رؤية فنية تعيد قراءة الهوية العربية والإسلامية من منظور معاصر، حيث تتلاقى صلابة الخطوط الهندسية مع انسيابية القماش لتجسّد حوارًا بين الثبات والتجدد.
+كل تصميم هو تأمل في الزمن في جذورٍ لا تذبل، وإبداعٍ يتجدد باستمرار ليصوغ أناقة تحمل جوهر الأصالة بروح الحداثة</p>
+                            </div>
                     </div>
                 </div>
             </div>
@@ -150,7 +149,16 @@
                     <div class="col-lg-8 col-md-10">
                         <div class="title-heading text-center">
                             <h4 class="mb-4">معلومات المصممة</h4>
-                            <p class="text-muted">للتواصل مع المصممة سارة العتيق، استخدمي القنوات التالية.</p>
+                            <p class="text-muted">للتواصل مع المصممة سارة العتيق، استخدموا القنوات التالية.</p>
+                            <div class="d-flex contact-detail align-items-center mt-4 justify-content-center">
+                                <div class="icon">
+                                    <i class="uil uil-user-circle fea icon-m-md text-dark me-3"></i>
+                                </div>
+                                <div class="flex-1 content text-start">
+                                    <h6 class="title fw-bold mb-0">اسم المصممة</h6>
+                                    <span class="text-primary">سارة العتيق</span>
+                                </div>
+                            </div>
                             <div class="d-flex contact-detail align-items-center mt-4 justify-content-center">
                                 <div class="icon">
                                     <i class="uil uil-phone fea icon-m-md text-dark me-3"></i>
